--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
-
-    <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.lab3_2.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first" >
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.lab3_2.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second" >
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+    app:startDestination="@id/mainActivity">
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="com.example.lab3_2.MainActivity"
+        android:label="fragment1"
+        tools:layout="@layout/fragment1" />
+    <activity
+        android:id="@+id/activity2"
+        android:name="com.example.lab3_2.Activity2"
+        android:label="fragment2"
+        tools:layout="@layout/fragment2" />
+    <activity
+        android:id="@+id/activity3"
+        android:name="com.example.lab3_2.Activity3"
+        android:label="fragment3"
+        tools:layout="@layout/fragment3" />
+    <activity
+        android:id="@+id/activityAbout2"
+        android:name="com.example.lab3_2.ActivityAbout"
+        android:label="ActivityAbout" />
 </navigation>
